# jougen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  jougen.pro
inc/: common.h  debug.h  debug.hpp  errors.hpp  versionInfo.hpp
inc/engine/: date.h  date.hpp  day.h  day.hpp  dish.h  dish.hpp  engineLimits.h  engineLimits.hpp  food.h  food.hpp  ingridients.hpp  item.h  item.hpp  itemsForm.hpp  journey.h  journey.hpp  meal.h  meal.hpp  peopleStats.h  peopleStats.hpp  stats.h  stats.hpp
inc/gui/: aboutWindow.hpp  convert.hpp  dishWindow.hpp  ingridientWindow.hpp  mainWindow.hpp  newDishWindow.hpp  newIngridientWindow.hpp
inc/tests/: testCommon.h
res/: default.json
src/: jougen.cpp  tests.cpp
src/engine/: date.cpp  day.cpp  dish.cpp  food.cpp  ingridients.cpp  item.cpp  itemsForm.cpp  journey.cpp  meal.cpp  stats.cpp
src/gui/: aboutWindow.cpp  aboutWindow.ui  convert.cpp  dishWindow.cpp  dishWindow.ui  ingridientWindow.cpp  ingridientWindow.ui  mainWindow.cpp  mainWindow.ui  newDishWindow.cpp  newDishWindow.ui  newIngridientWindow.cpp  newIngridientWindow.ui
